[gd_scene load_steps=2 format=3 uid="uid://d4jiywv2f1aaw"]

[ext_resource type="Script" path="res://source/Main Menu/main_menu.gd" id="1_wjba4"]

[node name="Control" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wjba4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -33.0
offset_right = 23.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Galaxy Wars
"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "
High Score"

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="play" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Start"

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Exit"

[connection signal="pressed" from="VBoxContainer/play" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
